Adicionando contact section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,45 @@
         </div>
 
     </section>
-
+    
+    <!--Contato comeca aqui-->
+    <section id="contato">
+        <div id="contactTitleWrap">
+            <img src="images/email.png" alt="email" id="contactIcon">
+            <p id="contactTitle">Estou à disposição para esclarecer suas dúvidas, discutir projetos e oferecer soluções personalizadas que atendam às suas necessidades. Entre em contato e vamos conversar sobre como posso contribuir para o sucesso do seu próximo projeto.</p>
+        </div>
+        <div id="formSocialsWrap">
+            <form action="https://formspree.io/f/mjkrqgov" method="post">
+                <div class="formularioLinha">
+                    <label for="name">Nome</label><br>
+                    <input type="text" id="name" name="name" required><br><br>
+                </div>
+                <div class="formularioLinha">
+                    <label for="email">Email</label><br>
+                    <input type="email" id="email" name="email" required><br><br>
+                </div>
+                <div class="formularioLinha">
+                    <label for="phone">Telefone</label><br>
+                    <input type="tel" id="phone" name="phone"><br><br>
+                </div>
+                <div class="formularioLinha">
+                    <label for="subject">Subject</label><br>
+                    <input type="text" id="subject" name="subject" required><br><br>
+                </div>
+                <div class="formularioLinha">
+                    <label for="message">Sua Mensagem</label><br>
+                    <textarea id="message" name="message" rows="4" required></textarea><br><br>
+                </div>
+                <button type="submit" id="contactButton">Enviar</button>
+            </form>
+            <div id='contatoLinks'>
+                    <a href="https://www.instagram.com/thatn1co/" class="linkContato" target="_blank"><img src="images/instagram.png" alt="instagram" class="imagensLinksSociais"></a>
+                    <a href="https://www.facebook.com/nicobalunza" class="linkContato" target="_blank"><img src="images/facebook.png" alt="facebook" class="imagensLinksSociais"></a>
+                    <a href="https://github.com/devnicolasbaker" class="linkContato" target="_blank"><img src="images/github.png" alt="github" class="imagensLinksSociais"></a>
+                    <a href="https://www.linkedin.com/in/nicolas-baker-b98ab134a/" class="linkContato" target="_blank"><img src="images/linkedin.png" alt="linkedin" class="imagensLinksSociais"></a>
+            </div>
+        </div>
+    </section>
 
     <!--Footer comeca aqui-->
     <footer>
