--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
     <!--Portfolio comeca aqui-->
 
     <section id="portfolio">
+        <h1 id="titlePortfolio">
+            Veja Alguns Dos Meus Projetos
+        </h1>
         <div class="portfolioWrapper">
             <h1 class="portfolioTitle">
                 Lauren Baker Author Website
             </h1>
-            <a href=""></a>
+            <a href="portfolio1.html" target="_blank"><img src="images/home page lauren.png" alt="" id="portfolioImagem"></a>
         </div>
 
     </section>
@@ -133,7 +136,7 @@
                 <a href="#sobre" class="linkFooter">SOBRE</a>
                 <a href="#habilidades" class="linkFooter">HABILIDADES</a>
                 <a href="#portfolio" class="linkFooter">PORTFOLIO</a>
-                <a href="#contact" class="linkFooter">CONTATO</a>
+                <a href="#contato" class="linkFooter">CONTATO</a>
             </div>
             <div class='footerLinks'>
                 <a href="https://www.instagram.com/thatn1co/" class="linkFooter" target="_blank"><img src="images/instagram.png" alt="instagram" class="imagensLinksSociais"></a>
